prevent potential NPE; refs #20084